# dtool-annotation

./: .gitignore  CHANGELOG.rst  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish.yml  test.yml
docs/: Makefile
docs/source/: conf.py
dtool_annotation/: __init__.py  cli.py
tests/: __init__.py  test_annotation_functional.py  test_dtool_annotation_package.py
